--- a/src/how-it-works.html
+++ b/src/how-it-works.html
@@ -48,17 +48,90 @@
       </div>
     </div>
   </nav>
-  <!--Hero Section-->
-  <div class="banner">
-    <img src="/images/INX-Logo-small-png.png" alt="INX logo" class="jumbo-logo mx-auto w-25">
+  <!--Header-->
+  <h1 class="schedule-header">How does it work?</h1>
+  <hr class="mx-auto w-75 mb-5">
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-sm">
+        <h3>Meet</h3>
+      </div>
+      <div class="col-sm">
+        <img src="./images/arrow.png" alt="arrow" class="arrow none">
+      </div>
+      <div class="col-sm">
+        <h3>Evaluate</h3>
+      </div>
+      <div class="col-sm">
+        <img src="./images/arrow.png" alt="arrow" class="arrow none">
+      </div>
+      <div class="col-sm">
+        <h3>Decide</h3>
+      </div>
+      <div class="col-sm">
+        <img src="./images/arrow.png" alt="arrow" class="arrow none">
+      </div>
+      <div class="col-sm">
+        <h3>Solve</h3>
+      </div>
+    </div>
   </div>
-  <h1 class="main-text">We make your brand come to life, so you don't have to.</h1>
-  <p class="hero-subtext">Here at INX we are here for you, and your brand. We live to make the smallest details have the
-    largest impacts. </p>
-  <div class="buttonWrapper">
-    <a href="services.html"><button class="btn cta">Learn More</button></a>
-  </div>
+  <hr class="mx-auto w-75 mt-5">
 
+  <div class="container mt-5">
+    <div class="row text-center">
+      <div class="col-sm">
+        <div class="miniBanner">
+          <h3 class="text-light">MEET</h3>
+          <img src="./images/handshake.png" alt="handshake" class="header-logo">
+        </div>
+        <p class="bg-light p-4 space larger-font">At INX, we strongly believe that meeting with our clients in person is essential to
+          building a successful working relationship. Our team likes to get to know our clients on a personal level, in
+          order to better understand their business goals and individual needs. Through face-to-face interactions, we
+          can gain valuable insights into our clients' industries and markets, allowing us to tailor our digital
+          marketing strategies accordingly. We want to make sure that our values and strategies align with yours.</p>
+      </div>
+      <div class="col-sm">
+        <div class="miniBanner">
+          <h3 class="text-light">EVALUATE</h3>
+          <img src="./images/evaluate.png" alt="pencil on paper" class="header-logo">
+        </div>
+        <p class="bg-light p-4 space larger-font">At INX, we take a thorough and collaborative approach to evaluating our clients' needs
+          and developing a comprehensive business plan. We start by conducting a detailed analysis of our clients'
+          business objectives, target audience, market trends, and competitors. This helps us gain a deep understanding
+          of their industry and enables us to identify the key challenges and opportunities they face, as well as gather marketing data from our clients.</p>
+      </div>
+    </div>
+    <div class="row text-center">
+      <div class="col-sm">
+        <div class="miniBanner">
+          <h3 class="text-light">DECIDE</h3>
+          <img src="./images/click.png" alt="finger clicking button" class="header-logo">
+        </div>
+        <p class="bg-light p-4 space larger-font">Once we have a clear understanding of the target audience, we work collaboratively with
+          our clients to determine which services are most appropriate for their needs. This involves a detailed
+          discussion of their business goals and the specific outcomes they hope to achieve. We also take into
+          consideration their budget, timeline, and existing marketing efforts to ensure that we are providing the most
+          impactful services at the most effective price point. We value your feedback and thrive in the creative
+          process of re-iterating design and development.</p>
+      </div>
+      <div class="col-sm">
+        <div class="miniBanner">
+          <h3 class="text-light">SOLVE</h3>
+          <img src="./images/puzzle.png" alt="puzzle piece" class="header-logo">
+        </div>
+        <p class="bg-light p-4 space larger-font">
+          To achieve success, we have established a streamlined workflow that enables us to move quickly and effectively
+          through the various stages of our projects. Our team of experts works closely together, utilizing the latest
+          technology and tools to collaborate on tasks and share information in real-time. This allows us to identify
+          potential issues and make necessary adjustments in a timely fashion, reducing the risk of delays and ensuring
+          that we are always on track to meet our clients' deadlines.
+        </p>
+      </div>
+    </div>
+  </div>
+  
+  <!--Footer-->
   <footer class="p-3">
     <div class="container text-center">
       <div class="row">
