--- a/src/our-work.html
+++ b/src/our-work.html
@@ -48,15 +48,64 @@
       </div>
     </div>
   </nav>
-  <!--Hero Section-->
-  <div class="banner">
-    <img src="/images/INX-Logo-small-png.png" alt="INX logo" class="jumbo-logo mx-auto w-25">
-  </div>
-  <h1 class="main-text">We make your brand come to life, so you don't have to.</h1>
-  <p class="hero-subtext">Here at INX we are here for you, and your brand. We live to make the smallest details have the
-    largest impacts. </p>
-  <div class="buttonWrapper">
-    <a href="services.html"><button class="btn cta">Learn More</button></a>
+
+  <h1 class="schedule-header">Some of our work</h1>
+  <hr class="mx-auto w-75 mb-5">
+
+  <div class="container mt-5">
+    <div class="row mx-auto">
+      <div class="col-sm d-flex">
+        <div class="card align-items-stretch mx-auto mb-5" style="width: 18rem;">
+          <div class="miniBanner">
+            <h2 class="mx-auto mt-4 text-light">VP Campaign</h2>
+          </div>
+          <img class="card-img-top thumbnail" src="./images/megan-vp.png" alt="Card image cap">
+          <div class="card-body">
+            <hr>
+            <p class="card-text">This VP campaign website was a short and sweet site that we did for a fellow Weber
+              State student running for the VP of Activities. This site was primarily designed for mobile and used new
+              tech such as QR codes so that other people could scan each others phones and be directly sent to the
+              voting website.</p>
+          </div>
+          <a href="https://megan-vp-activities.netlify.app/"><button class="learn-more text-light">Learn
+              More</button></a>
+        </div>
+      </div>
+      <div class="col-sm d-flex">
+        <div class="card align-items-stretch mx-auto mb-5" style="width: 18rem;">
+          <div class="miniBanner">
+            <h2 class="mx-auto mt-4 text-light">Apollo Marketing</h2>
+          </div>
+          <img class="card-img-top thumbnail" src="./images/apollo.png" alt="Card image cap">
+          <div class="card-body">
+            <hr>
+            <p class="card-text">Apollo Marketing is a marketing company that reached out to us with the idea of
+              creating a sales funnel for their solar sales. Along with this they were going to make a section of the
+              website for clients to set up meetings as well as gather info for potential employees. The back-end to
+              this website is not yet built but in the works.</p>
+          </div>
+          <a href="https://living-apollo.netlify.app/"><button class="learn-more text-light">Learn More</button></a>
+        </div>
+      </div>
+      <div class="col-sm d-flex">
+        <div class="card align-items-stretch mx-auto mb-5" style="width: 18rem;">
+          <div class="miniBanner">
+            <h2 class="mx-auto mt-4 text-light">Case Study</h2>
+          </div>
+          <img class="card-img-top thumbnail" src="./images/Ocean-Cleanup-thubnail.png" alt="Card image cap">
+          <div class="card-body">
+            <hr>
+            <p class="card-text">The purpose of this case study was to make a mobile app for a non-profit company. This
+              was a group project that I worked on throughout a period of 3 months with 2 other group members. For our
+              organization we chose to go with "The Ocean Cleanup". This company specializes in cleaning up the oceans
+              and rivers around the world through their "interceptor" machines that collect and recycle garbage. </p>
+          </div>
+          <a
+            href="https://www.figma.com/proto/wusQ5t4BaVEJYve6HImOz2/High-Fidelity?node-id=7-4&scaling=scale-down&page-id=0%3A1&starting-point-node-id=7%3A4"><button
+              class="learn-more text-light">Learn More</button></a>
+        </div>
+      </div>
+    </div>
   </div>
 
   <footer class="p-3">
