--- a/src/schedule.html
+++ b/src/schedule.html
@@ -48,15 +48,60 @@
       </div>
     </div>
   </nav>
-  <!--Hero Section-->
-  <div class="banner">
-    <img src="/images/INX-Logo-small-png.png" alt="INX logo" class="jumbo-logo mx-auto w-25">
-  </div>
-  <h1 class="main-text">We make your brand come to life, so you don't have to.</h1>
-  <p class="hero-subtext">Here at INX we are here for you, and your brand. We live to make the smallest details have the
-    largest impacts. </p>
-  <div class="buttonWrapper">
-    <a href="services.html"><button class="btn cta">Learn More</button></a>
+  <h1 class="schedule-header">Schedule a time to meet with us</h1>
+
+  <p class="text-center mb-5">We here at INX understand that your time is valuable, that is why we have made scheduling
+    a time to talk with us as easy as 1..2..3!</p>
+  <hr class="mx-auto w-75">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm ">
+        <div class="miniBanner mb-4">
+          <h1 class="text-white text-center">Schedule meeting</h1>
+        </div>
+        <!-- Calendly inline widget begin -->
+        <div class="calendly-inline-widget"
+          data-url="https://calendly.com/inx-digital/inx-brand-meeting?text_color=ff1d1d&primary_color=ff1d1d"
+          style="min-width:320px;height:630px;"></div>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+        <!-- Calendly inline widget end -->
+      </div>
+      <div class="col-sm">
+        <div class="miniBanner">
+          <h1 class="text-light text-center">Contact Information</h1>
+        </div>
+        <div class="boxes mt-4">
+          <h3 class="text-center mt-4">Hours of operation</h3>
+          <hr class="w-75 mx-auto">
+          <div class="row text-center mb-3">
+            <div class="col-sm">
+              <h5>Monday - Friday</h5>
+            </div>
+            <div class="col-sm">
+              <h5>9:00 AM - 3:00 PM</h5>
+            </div>
+          </div>
+          <div class="row text-center mb-3">
+            <div class="col-sm">
+              <h5>Saturday - Sunday</h5>
+            </div>
+            <div class="col-sm">
+              <h5>CLOSED</h5>
+            </div>
+          </div>
+        </div>
+        <div class="boxes mt-4">
+          <h3 class="text-center mt-4">Shoot us a message</h3>
+          <hr class="w-75 mx-auto">
+          <h5><b>Email - </b> cooper@inx-digital.com</h5>
+          <h5><b>Phone - </b> 385-244-6950</h5>
+          <h5><b>Address - </b> <a href="http://maps.google.com/maps?q=2562+Washington+Blvrd,+Ogden,+UT+84401">2562
+              Washington Blvd, Ogden, UT 84401</a></h5>
+        </div>
+
+
+      </div>
+    </div>
   </div>
 
   <footer class="p-3">
