--- a/src/services.html
+++ b/src/services.html
@@ -48,15 +48,61 @@
       </div>
     </div>
   </nav>
-  <!--Hero Section-->
-  <div class="banner">
-    <img src="/images/INX-Logo-small-png.png" alt="INX logo" class="jumbo-logo mx-auto w-25">
-  </div>
-  <h1 class="main-text">We make your brand come to life, so you don't have to.</h1>
-  <p class="hero-subtext">Here at INX we are here for you, and your brand. We live to make the smallest details have the
-    largest impacts. </p>
-  <div class="buttonWrapper">
-    <a href="services.html"><button class="btn cta">Learn More</button></a>
+
+  <h1 class="text-center mt-5">What do we offer?</h1>
+  <hr class=" w-75 mx-auto">
+  <div class="container">
+
+    <div class="row gap">
+      <div class="col-sm">
+        <h2> <img src="/images/design.png" alt="design icon" class="design"> Web Design</h2>
+      </div>
+      <div class="col-sm">
+        <p class="space larger-font">Marketing being heavily online in recent days, it is one of the most important steps to get a well rounded,
+          easily accessible, easy to use website that can help funnel your clients where they need to end up. With a
+          team of designers, developers, and artists we can tackle any idea that you have in mind while grounding your
+          business in the culture that you have built.</p>
+      </div>
+      <div class="row gap">
+        <div class="col-sm">
+          <h2> <img src="/images/code.png" alt="photography icon" class="pencil"> Web Development</h2>
+        </div>
+        <div class="col-sm">
+          <p class="space larger-font">The only way to complete a good design, is to implement those designs with code. Our team of designers and
+            developers work very close to ensure that the code is structured just as well as the design.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row gap">
+      <div class="col-sm">
+        <h2> <img src="/images/pencil.png" alt="pencil icon" class="pencil"> Logos</h2>
+      </div>
+      <div class="col-sm">
+        <p class="space larger-font">We offer a logo service that can really help shape or spice up your brand. We offer full service on custom
+          ideas, and have designers on hand that are ready to mock up prototypes and refine ideas.</p>
+      </div>
+    </div>
+    <div class="row gap">
+      <div class="col-sm">
+        <h2> <img src="/images/camera.png" alt="photography icon" class="pencil"> Photography</h2>
+      </div>
+      <div class="col-sm">
+        <p class="space larger-font">Photography can be one of the best ways to personalize your website. The right photographs makes your company
+          look professional, representable, and friendly. Our photographers use high end equipment and years of
+          experience to help turn the look of your business into a modern intersections where all generations will feel
+          welcome.</p>
+      </div>
+    </div>
+    <div class="row gap">
+      <div class="col-sm">
+        <h2> <img src="/images/video.png" alt="photography icon" class="pencil"> Videography</h2>
+      </div>
+      <div class="col-sm">
+        <p class="space larger-font">Whether it is an onboarding video, or a video to grab the attention of an audience, we have you covered.
+          Along with our photographers we also have people who are highly skilled in video production and are ready to
+          make your vision come to life.</p>
+      </div>
+    </div>
   </div>
 
   <footer class="p-3">
